--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         </div>
         <nav>
           <ul>
+            
             <li><i class="fi fi-br-menu-burger"></i></li>
             <li><i class="fi fi-rr-messages"></i></li>
             <li><i class="fi fi-ss-user"></i></li>
@@ -55,7 +56,7 @@
         </div>
         
         <div class="carousel-inner" style="width: 100%; max-height: 500px;">
-          <div class="carousel-item active" data-bs-interval="3000">
+          <div class="carousel-item active" data-bs-interval="3000" >
             <img src="./images/constructionimageexample3.jpeg" class="vh-50 d-block w-100"  alt="...">
           </div>
           <div class="carousel-item " data-bs-interval="3000">
@@ -79,7 +80,7 @@
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="card-body">
-                    <a href="#" class="card-link">Card link</a>
+                    <a href="./back.html" class="card-link">Card link</a>
                   </div>
                 </div>
               </div>
