--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <div class="card-body">
-                    <a href="./back.html" class="card-link">Card link</a>
+                    <a href="./back.html" class="card-link"><span style="color: red">KRASKA</span></a>
                   </div>
                 </div>
               </div>
