--- a/index.html
+++ b/index.html
@@ -202,7 +202,8 @@
 <footer>
     <div class="footer-container">
         <div class="left-container">
-            <img src="./images/logofiablesmobile.jpeg" alt="Company Logo">
+          <img id="img1" src="./images/logofiablescomputer.jpeg" alt="Logo">
+          <img id="img2" src="./images/logofiablesmobile.jpeg" alt="">
           </div>
       <div class="right-container">
         <a href="#">Home</a>
