--- a/kraska.html
+++ b/kraska.html
@@ -19,9 +19,12 @@
 </head>
 <body>
     <header>
+      <a href="index.html">
         <div class="logo">
           <img id="img1" src="./images/logofiablescomputer.jpeg" alt="Logo">
         </div>
+      </a>
+       
         <nav>
           <ul>
             <li><i class="fi fi-br-menu-burger"></i></li>
@@ -40,7 +43,7 @@
         </nav>
       </header>
       <div class="container mt-3" style="width: 90%;">
-        <h1>KRASKA</h1>
+        <h1>TEMA 1. 1</h1>
         <h4>samaya lutshaya</h4>
         <div id="carouselExampleCaptions" class="carousel slide">
             <div class="carousel-indicators">
@@ -80,7 +83,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
-          <h2 class="mt-3">KRASKA</h2>
+          <h2 class="mt-3">TEMA 1 . 1</h2>
           <dl class="row">
             <dt class="col-sm-3">Term</dt>
             <dd class="col-sm-9">
