finish that part

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/navbar.css">
 </head>
 <body>
+  // finish this part
     <header>
       <div class="left-header-part">
         <details class="menu-details">
